documentation/src/content/docs/0.0.1/getting-started.mdx
---
title: Getting Started
slug: 0.0.1/getting-started
---

## Prerequisites

You will need to have a Starlight website set up.
If you don't have one yet, you can follow the ["Getting Started"](https://starlight.astro.build/getting-started) guide in the Starlight docs to create one.

## Installation

import { Steps, Tabs, TabItem } from '@astrojs/starlight/components'

<Steps>
  1. `starlight-full-view-mode` is a Starlight [plugin](https://starlight.astro.build/reference/plugins/). Install it by running the following command in your terminal:

     <Tabs syncKey="pkg">
       <TabItem label="npm">
         ```sh
         npm install starlight-full-view-mode
         ```
       </TabItem>

       <TabItem label="pnpm">
         ```sh
         pnpm add starlight-full-view-mode
         ```
       </TabItem>

       <TabItem label="Yarn">
         ```sh
         yarn add starlight-full-view-mode
         ```
       </TabItem>
     </Tabs>

  2. Configure the plugin in your Starlight [configuration](https://starlight.astro.build/reference/configuration/#plugins) in the `astro.config.mjs` file.

     ```diff lang="js"
     // astro.config.mjs
     import starlight from '@astrojs/starlight'
     import { defineConfig } from 'astro/config'
     +import starlightFullViewMode from 'starlight-full-view-mode'

     export default defineConfig({
       integrations: [
         starlight({
     +      plugins: [
     +        starlightFullViewMode({
     +           // Configuration options go here.
     +        })
            ],
           title: 'My Docs',
         }),
       ],
     })
     ```
</Steps>

## Configuration

The plugin accepts the following configuration options:

### `leftSidebarEnabled`

* **Type:** `boolean`
* **Default:** `true`
* **Description:** Controls whether the left sidebar can be toggled between collapsed and expanded states.

### `rightSidebarEnabled`

* **Type:** `boolean`
* **Default:** `true`
* **Description:** Controls whether the right sidebar (table of contents) can be toggled between collapsed and expanded states.

#### Examples

Enable the left sidebar and disable the right sidebar:

```js
starlightFullViewMode({
  leftSidebarEnabled: true,
  rightSidebarEnabled: false
})
```

Enable the right sidebar and disable the left sidebar:

```js
starlightFullViewMode({
  leftSidebarEnabled: false,
  rightSidebarEnabled: true
})
```
